# solana_usdc_monitor

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: Cargo.toml
backend/src/: instruction.rs  main.rs  slot.rs  solana.rs  transactions.rs
backend/src/instruction/: mod.rs  test_data.rs  unit_tests.rs
backend/src/slot/: mod.rs  unit_tests.rs
backend/src/transaction/: mod.rs  unit_tests.rs
frontend/: package-lock.json  package.json
frontend/solana-usdc-ui/: package-lock.json  package.json
frontend/solana-usdc-ui/src/: App.tsx  index.css
frontend/src/: App.tsx  Solana.tsx  index.css
