[package]
name = "solana_usdc_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
env_logger = "0.11"
log = "0.4"
solana-client = "2.1"
solana-transaction-status = "2.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6", features = ["cors"] }
